@@ -22,6 +22,7 @@
         <dependency force="true" org="net.java.dev.jna" name="jna" rev="3.4+" conf="build->core"/>
         <dependency force="true" org="net.sourceforge.jibx" name="jibx" rev="1.2.3" conf="build->runtime-xpp3,extras;jibx-bind->bind"/>
         <dependency force="true" org="net.sourceforge.java-readline" name="java-readline" rev="0.8.0" conf="build->default"/>
+        <dependency force="true" org="net.sourceforge.opencsv" name="opencsv" rev="2.2" conf="build->default"/>
         <dependency force="true" org="org.jmock" name="jmock" rev="2.5.1" conf="build,test->core"/>
         <dependency force="true" org="org.hamcrest" name="hamcrest" rev="1.1" conf="build->default"/>
         <dependency force="true" org="org.slf4j" name="slf4j" rev="1.6.1" conf="build->default;test->log4j"/>
